Refactor to use latest java features (#469)
* Refactor to use latest java features