@@ -90,6 +90,6 @@ public class ClientSummaryController extends AbstractClientSummaryController {
 
     session.setAttribute(SUBMISSION_TRANSACTION_ID, response.getTransactionId());
 
-    return String.format("redirect:/submissions/%s", SUBMISSION_CREATE_CLIENT);
+    return "redirect:/submissions/%s".formatted(SUBMISSION_CREATE_CLIENT);
   }
 }
